--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_APP_MAIL_CHIMP_URL = '';
+VITE_APP_MAIL_CHIMP_URL = 'http://eepurl.com/ifWeNP';
 VITE_APP_MAIL_CHIMP_U = '';
 VITE_APP_MAIL_CHIMP_ID= '';
