--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.14",
     "@types/nodemailer": "^6.4.6",
     "@types/react-mailchimp-subscribe": "^2.1.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -20,7 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
-    "react-mailchimp-subscribe": "^2.1.3"
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-on-screen": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
